--- a/css/style.css
+++ b/css/style.css
@@ -282,17 +282,10 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
 }
 
-.intro .wrapper__intro .dec__block_intro {
-  height: 92px;
-  width: 12px;
-  background: #F16D7F;
-  position: absolute;
-  right: 462px;
-  top: 339px;
-}
-
 .intro .wrapper__intro .intro__text {
   margin-right: 90px;
+  border-left: 12px solid #E05C6E;
+  padding-left: 16px;
 }
 
 .intro .wrapper__intro .intro__text .intro__title {
@@ -318,7 +311,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .wrapper__offer {
-  padding: 95px 0 96px;
+  padding: 65px 0 96px;
 }
 
 .wrapper__offer .offer__inner {
@@ -333,8 +326,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .wrapper__offer .offer__inner .for__element {
-  width: 33.33333%;
-  padding: 0 0 22.81% 0;
+  max-width: 360px;
+  width: 100%;
+  height: 260px;
   margin-right: 30px;
   position: relative;
 }
@@ -387,18 +381,16 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 
-.wrapper__offer .offer__inner .for__element:nth-child(3) {
-  margin-right: 0;
-}
-
-.wrapper__offer .for__element_long {
+.wrapper__offer .offer__inner .for__element_long {
+  max-width: 100%;
   width: 100%;
-  padding: 0 0 15.79% 0;
+  height: 180px;
   margin-top: 30px;
+  margin-right: 0;
   position: relative;
 }
 
-.wrapper__offer .for__element_long .for__element_pic {
+.wrapper__offer .offer__inner .for__element_long .for__element_pic {
   display: block;
   width: 100%;
   height: 100%;
@@ -408,7 +400,7 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 1;
 }
 
-.wrapper__offer .for__element_long .for__bg {
+.wrapper__offer .offer__inner .for__element_long .for__bg {
   height: 100%;
   width: 100%;
   position: absolute;
@@ -425,7 +417,7 @@ h1, h2, h3, h4, h5, h6 {
           align-items: center;
 }
 
-.wrapper__offer .for__element_long .for__bg .for__bg_text {
+.wrapper__offer .offer__inner .for__element_long .for__bg .for__bg_text {
   text-align: center;
   font-family: Lato;
   font-style: normal;
@@ -436,7 +428,7 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 
-.wrapper__offer .for__element_long .for__bg .for__bg_text .bg__text_span {
+.wrapper__offer .offer__inner .for__element_long .for__bg .for__bg_text .bg__text_span {
   font-family: Lato;
   font-style: normal;
   font-weight: 700;
@@ -444,6 +436,10 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 28.8px;
   color: #F16D7F;
   text-transform: uppercase;
+}
+
+.wrapper__offer .offer__inner .for__element:nth-child(3) {
+  margin-right: 0;
 }
 
 .fetured__text {
