--- a/css/style.scss
+++ b/css/style.scss
@@ -319,17 +319,19 @@ h1, h2, h3, h4, h5, h6 {
     align-items: center;
     justify-content: end;
     position: relative;
-    .dec__block_intro {
-      height: 92px;
-      width: 12px;
-      background: #F16D7F;
-      position: absolute;
-      right: 462px;
-      top: 339px
-    }
+    // .dec__block_intro {
+    //   height: 92px;
+    //   width: 12px;
+    //   background: #F16D7F;
+    //   position: absolute;
+    //   right: 462px;
+    //   top: 339px
+    // }
 
     .intro__text {
       margin-right: 90px;
+      border-left: 12px solid #E05C6E;
+      padding-left: 16px;
 
       .intro__title {
         text-transform: uppercase;
@@ -359,7 +361,7 @@ h1, h2, h3, h4, h5, h6 {
 
 // Offer start
 .wrapper__offer {
-  padding: 95px 0 96px;
+  padding: 65px 0 96px;
 
   .offer__inner {
     display: flex;
@@ -367,8 +369,9 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: space-between;
 
     .for__element {
-      width: 33.33333%;
-      padding: 0 0 22.81% 0;
+      max-width: 360px;
+      width: 100%;
+      height: 260px;
       margin-right: 30px;
       position: relative;
 
@@ -417,62 +420,66 @@ h1, h2, h3, h4, h5, h6 {
       }
     }
 
+    .for__element_long {
+      max-width: 100%;
+      width: 100%;
+      height: 180px;
+      margin-top: 30px;
+      margin-right: 0;
+      position: relative;
+  
+  
+  
+      .for__element_pic {
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+      }
+  
+      .for__bg {
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        z-index: 2;
+        background: rgba(33, 22, 22, 0.7);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+  
+        .for__bg_text {
+          text-align: center;
+          font-family: Lato;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 16px;
+          line-height: 19px;
+          color: #FFFFFF;
+          text-transform: uppercase;
+  
+          .bg__text_span {
+            font-family: Lato;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 24px;
+            line-height: 28.8px;
+            color: #F16D7F;
+            text-transform: uppercase;
+          }
+        }
+      }
+    }
+
     .for__element:nth-child(3) {
       margin-right: 0;
     }
 
   }
 
-  .for__element_long {
-    width: 100%;
-    padding: 0 0 15.79% 0;
-    margin-top: 30px;
-    position: relative;
 
-
-
-    .for__element_pic {
-      display: block;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 1;
-    }
-
-    .for__bg {
-      height: 100%;
-      width: 100%;
-      position: absolute;
-      z-index: 2;
-      background: rgba(33, 22, 22, 0.7);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      .for__bg_text {
-        text-align: center;
-        font-family: Lato;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 16px;
-        line-height: 19px;
-        color: #FFFFFF;
-        text-transform: uppercase;
-
-        .bg__text_span {
-          font-family: Lato;
-          font-style: normal;
-          font-weight: 700;
-          font-size: 24px;
-          line-height: 28.8px;
-          color: #F16D7F;
-          text-transform: uppercase;
-        }
-      }
-    }
-  }
 }
 // Offer end
 
