--- a/css/style.scss
+++ b/css/style.scss
@@ -59,8 +59,9 @@ a:hover {
   text-decoration: none;
 }
 
-ul li {
+ul, li {
   list-style: none;
+  margin-bottom: 0;
 }
 
 img {
@@ -307,6 +308,8 @@ h1, h2, h3, h4, h5, h6 {
 
 // Intro start
 .intro {
+  
+  background: #F1E4E6;
 
 
 
@@ -810,10 +813,10 @@ h1, h2, h3, h4, h5, h6 {
     .social__block {
 
       .social__icon {
-        width: 50px;
-        height: 50px;
+        width: 32px;
+        height: 32px;
         border: 1px solid #000;
-        padding: 8px 12px;
+        padding: 8px 7px;
         background: #fff;
   
         &:hover {
@@ -930,18 +933,22 @@ h1, h2, h3, h4, h5, h6 {
     }
   }
 
-// Catalog fetured start
+// Catalog fetured end
 
 .catalog__pages_inner {
   text-align: center;
   margin-bottom: 96px;
   
   .catalog__pages {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 250px;
+    height: 43px;
     margin: 0 auto;
     padding: 15px;
     border: 1px solid #EBEBEB;
-    text-align: center;
+    align-items: center;
 
     .arrow__icon_left{
       margin-right: 15px;
@@ -952,7 +959,7 @@ h1, h2, h3, h4, h5, h6 {
       cursor: pointer;
     }
 
-    .pages__number {
+    .catalog__pages_item {
       font-family: Lato;
       font-style: normal;
       font-weight: 300;
@@ -961,18 +968,452 @@ h1, h2, h3, h4, h5, h6 {
       color: #C4C4C4;
       margin-right: 15px;
       transition: .30s;
-      cursor: pointer;
+      opacity: .4;
+
+      &:hover {
+        opacity: 1;
+      }
 
       &:active, &:focus{
         color: #EF5B70;
       }
 
-      &:nth-child(7), &:nth-child(8)  {
+      &:nth-child(1), &:nth-child(7), &:nth-child(8), &:nth-child(10)  {
         margin-right: 0;
       }
     }
   
   }
 }
-// Catalog.html start
+// Catalog.html end
+
+// Product.html start
+
+// carousel start
+.carousel-inner {
+  width: 1600px;
+  height: 777px;
+  margin: 0 auto;
+  margin-bottom: 42px;
+
+  .carousel-item {
+
+
+    .d-block {
+      margin: 0 auto;
+      height: 777px;
+    }
+  }
+}
+
+.carousel-control-prev {
+  width: 47px;
+  height: 47px;
+  top: 50%;
+  left: 10%;
+  background: #D8D8D8;
+
+  .carousel-control-prev-icon {
+    background: url(../img/svg/arrow_carousel_left.svg);
+  }
+}
+
+.carousel-control-next {
+  width: 47px;
+  height: 47px;
+  top: 50%;
+  right: 10%;
+  background: #D8D8D8;
+
+  .carousel-control-next-icon {
+    background: url(../img/svg/arrow_carousel_right.svg);
+  }
+}
+// carousel end
+
+// collection deskription start
+
+
+.wrapper__desk {
+  position: relative;
+  border: 1px solid #EAEAEA;
+  border-top:none;
+  text-align: center;
+  margin-bottom: 130px;
+
+  .top__block {
+    position: absolute;
+
+    width: 100%;
+    height: 60px;
+    background-color: #fff;
+    top: -60px;
+    left: 0;
+    border: 1px solid #EAEAEA;
+    border-bottom:none;
+  }
+
+  .desk__text {
+    padding-top: 64px;
+    width: 641px;
+    margin: 0 auto;
+    border-bottom: 1px solid #EAEAEA;
+
+    .desk__title {
+      text-transform: uppercase;
+      font-family: Lato;
+      font-style: normal;
+      font-weight: 300;
+      font-size: 14px;
+      line-height: 17px;
+      color: #F16D7F;
+
+      &::after {
+        display: block;
+        content: "";
+        width: 63px;
+        height: 3px;
+        background: #EF5B70;
+        margin: 12px auto;
+      }
+
+    }
+
+    .desk__subtitle {
+      font-family: Lato;
+      font-style: normal;
+      font-weight: 300;
+      font-size: 18px;
+      line-height: 22px;
+      color: #4D4D4D;
+      margin-bottom: 48px;
+    }
+
+    .desk__info {
+      width: 555px;
+      font-family: Lato;
+      font-style: normal;
+      font-weight: 300;
+      font-size: 14px;
+      line-height: 17px;
+      text-align: center;
+      color: #5E5E5E;
+      margin: 0 auto 32px; 
+    }
+
+    .desk__price {
+      font-family: Lato;
+      font-style: normal;
+      font-weight: 300;
+      font-size: 24px;
+      line-height: 29px;
+      color: #EF5B70;
+      margin-bottom: 65px;
+
+    }
+  }
+}
+
+.desk__filters {
+  padding-top: 65px;
+  .sort {
+    // display: block;
+    text-transform: uppercase;
+    background: none;
+  
+    .sort__text {
+      font-family: Lato;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 17px;
+      color: #6F6E6E;
+      margin-right: 10px;
+    }
+  
+    .sort__icon {
+      fill:#6F6E6E;
+      margin-right: 28px;
+    }
+  }
+}
+.desk__btn {
+  margin: 50px 0 65px;
+  background: none;
+  border: 1px solid #FF6A6A;
+  padding: 15px 56px 8px 23px;
+
+  &:hover {
+    background: #FF6A6A;
+    transition: .30s;
+  }
+
+  &:hover .desk__btn_inner .desk__pay_icon {
+    fill: #fff;
+    transition: .30s;
+  }
+
+  &:hover .desk__btn_inner .desk__btn_text {
+    color: #fff;
+    transition: .30s;
+  }
+
+  .desk__btn_inner {
+    display: flex;
+    align-items: center;
+
+
+
+    .desk__pay_icon {
+      fill: #F26376;
+      margin-right: 22px;
+    }
+
+    .desk__btn_text {
+      font-family: Lato;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 19px;
+      color: #F26376;
+    }
+  }
+}
+// collection description end
+
+// Product.html end
+
+// Cart.html start
+// shopping__carts start
+.shopping__carts{
+  padding: 50px 0 128px;
+
+  .shopping__inner {
+    display: flex;
+    justify-content: space-between;
+
+
+    .shopping__card {
+     display: flex;
+     align-items: flex-start;
+     margin-bottom: 40px;
+     box-shadow: (17px 19px 24px rgba(0, 0, 0, 0.13));
+     position: relative;
+     
+
+
+     .shopping__card_text {
+       padding: 22px 31px 31px 62px;
+       width: 390px;
+
+       .shopping__text_title {
+         width: 100%;
+         max-width: 210px;
+         font-family: Lato;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 24px;
+        line-height: 29px;
+        color: #222222;
+        margin-bottom: 42px;
+       }
+
+        .shopping__text_subtitle {
+          font-family: Lato;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 22px;
+          line-height: 26px;
+          color: #575757;
+          display: flex;
+
+          .quantity {
+            margin-left: 24px;
+            padding: 1px 17px;
+            border: 1px solid #EAEAEA;
+
+          }
+
+          .shop-red {
+            color: #EF5B70;
+          }
+
+        }
+     }
+
+     .card--cross {
+       position: absolute;
+       top: 28px;
+       right: 22px;
+
+       .cross--btn {
+         background: none;
+         border: 0;
+       }
+     }
+
+    }
+
+    .shopping--btns {
+      display: flex;
+      justify-content: space-between;
+
+      .shopping--btn {
+        background: none;
+        padding: 17px 40px;
+        text-transform: uppercase;
+        border: 1px solid #A4A4A4;
+        font-family: Lato;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 17px;
+        color: #000000;
+        transition: .3s;
+
+        &:hover {
+          background: #000;
+          color: #fff;
+        }
+
+      }
+    }
+
+    .shipping--address {
+      text-align: left;
+      .shipping--title {
+        font-family: Lato;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 19px;
+        color: #222222;
+        margin-bottom: 20px;
+      }
+
+      .shipping--input {
+        display: block;
+        font-family: Lato;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 13px;
+        line-height: 16px;
+        color: #B1B1B1;
+        width: 359px;
+        padding: 12px 0 16px 16px;
+        border: 1px solid #A4A4A4;
+        margin-bottom: 20px;
+
+        
+        &:last-child {
+          margin-bottom: 24px;
+        }
+
+      }
+      
+      .country {
+        opacity: .4;
+      }
+
+      .quote {
+        background: none;
+        padding: 9px 14px 11px;
+        font-family: Lato;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 11px;
+        line-height: 13px;
+        color: #4A4A4A;
+        border: 1px solid #A4A4A4;
+        margin-bottom: 58px;
+      }
+
+      .cost--block{
+        background: #F5F3F3;
+        padding: 39px 34px 42px 44px;
+        text-align: right;
+
+        .sub--total-text {
+          margin-bottom: 12px;
+
+          .sub--total-cost {
+            font-family: Lato;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 11px;
+            line-height: 13px;
+            color: #4A4A4A;
+          }
+          .sub--total-price {
+            font-family: Lato;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 11px;
+            line-height: 13px;
+            color: #4A4A4A;
+            margin-left: 24px;
+          }
+        }
+
+        .grand--total-text {
+          margin-bottom: 12px;
+
+          &::after {
+            display: block;
+            content: '';
+            width: 100%;
+            height: 1px;
+            background: #E2E2E2;
+            margin-top: 21px;
+            margin-bottom: 17px;
+          }
+
+          .grand--total-cost {
+            text-transform: uppercase;
+            font-family: Lato;
+            font-style: normal;
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 19px;
+            color: #222222;
+          }
+          .grand--total-price {
+            text-transform: uppercase;
+            font-family: Lato;
+            font-style: normal;
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 19px;
+            color: #222222;
+            margin-left: 24px;
+          }
+        }
+
+        .cost--btn {
+          background: #F16D7F;;
+          display: block;
+          margin: 0 auto;
+          padding: 15px 43px 16px 41px;
+          text-transform: uppercase;
+          font-family: Lato;
+          font-style: normal;
+          font-weight: 300;
+          font-size: 16px;
+          line-height: 19px;
+          color: #FFFFFF;
+          transition: .3s;
+
+          &:hover {
+            background: #d46170;
+
+          }
+        }
+      }
+
+    }
+  }
+}
+
+// shopping__carts end
+// Cart.html end
 
